ProjetoDevops/praticadevops_chart/templates/logger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger-service
  labels:
    app: logger-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logger-service
  template:
    metadata:
      labels:
        app: logger-service
    spec:
      containers:
      - name: logger-service
        image: cassax/praticadevops-logger:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
