ProjetoDevops/praticadevops_chart/templates/logger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logger-service
  labels:
    app: logger-service
spec:
  selector:
    app: logger-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
